# reionization-emulator

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  reionemu_package_example.ipynb  requirements.txt  sitemap.xml
.github/workflows/: ci.yml  release.yml
api-overview/: index.html
api/artifacts/: index.html
api/data-loading/: index.html
api/hyperparameter-tuning/: index.html
api/models/: index.html
api/simulation-io/: index.html
api/training/: index.html
data/: README.md  data_vis.ipynb  proc_data_vis.ipynb
data/processed/: poc_three_params.npz
data/raw/sims_v0/sim0/: sim0pk_arrays.hdf5
data/raw/sims_v0/sim1/: sim1pk_arrays.hdf5
data/raw/sims_v0/sim2/: sim2pk_arrays.hdf5
data/raw/sims_v0/sim3/: sim3pk_arrays.hdf5
data/raw/sims_v0/sim4/: sim4pk_arrays.hdf5
data/raw/sims_v0/sim5/: sim5pk_arrays.hdf5
data/raw/sims_v0/sim6/: sim6pk_arrays.hdf5
data/raw/sims_v0/sim7/: sim7pk_arrays.hdf5
data/tau_tests/v1/: pk_arrays.hdf5
datasets/: README.md
datasets/param_samples/: params_test.txt  params_v6.txt
datasets/raw/b0_tests/: b0_tests.txt
datasets/raw/sims_v2/: sim_log.txt
datasets/raw/sims_v3/: sim_log.txt
datasets/raw/sims_v4/: sim_log.txt
datasets/raw/sims_v5/: sim_log.txt
datasets/raw/tau_tests/v1/: tau_tests-v1-output.txt
docs/: api-overview.md  getting-started.md  index.md  reionemu_package_example.ipynb
docs/api/: artifacts.md  data-loading.md  hyperparameter-tuning.md  models.md  simulation-io.md  training.md
docs/stylesheets/: extra.css
getting-started/: index.html
models/poc_three_params/: poc_three_params_model.pt
models/poc_three_params/poc_three_params_norm/: X_mean.npy  X_std.npy  ell.npy
notebooks/: README.md  data_vis.ipynb  emul_data_vis.ipynb  param_space_validation.ipynb  poc_four_param_model.ipynb  poc_four_param_model_kfold_cv.ipynb  poc_mc_dropout_model.ipynb  poc_three_param_model.ipynb  proc_data_vis.ipynb  proof_of_concept.ipynb  raw_data_vis.ipynb
scripts/: README.md  build_dataset.py  compute_cl.py  job.sh  lhs_four_params.py  lhs_one_param.py  run_sims_array.sh  run_simulation_array.py  run_simulations.py
scripts/dataset/: build_training_h5.py
scripts/hpc/: run_simulation_array.py  run_simulations.py
scripts/hpc/slurm_scripts/: run_all_sims.sh  run_sims_array.sh
scripts/sampling/: lhs_four_params.py  lhs_one_param.py
scripts/slurm_scripts/: README.md
scripts/training/: train_poc_four_param_model.py  tune_four_param_emu.py
search/: search_index.json
src/: README.md  emulator.py  evaluate.py  preprocessing.py  train.py
src/emulator/data/: dataloaders.py
src/emulator/models/: poc_four_params.py  poc_three_params.py
src/emulator/simio/: build_xy.py  compute_cl.py  condense_h5.py
src/emulator/training/: kfold_cv.py  train_loop.py
src/reionemu/: __init__.py
src/reionemu/artifact/: __init__.py  experiment_artifact_system.py
src/reionemu/data/: __init__.py  dataloaders.py  normalization.py
src/reionemu/models/: __init__.py  four_param_emulator.py  mc_dropout_emulator.py  three_param_emulator.py
src/reionemu/models/experimental/: __init__.py  (+2 more)
src/reionemu/simio/: __init__.py  build_xy.py  compute_cl.py  condense_h5.py
src/reionemu/training/: __init__.py  builders.py  kfold_cv.py  metrics.py  train_loop.py  tune_four_param.py
src/reionemu/tuning/: __init__.py  four_param.py
