[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "reionemu"
version = "0.2.0"
description = "Machine-learning emulator pipeline for the kinetic Sunyaev-Zel'dovich angular power spectrum."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICEN[CS]E*"]
authors = [
    { name = "Robert Pearce", email = "robertbdpearce@gmail.com" }
]
keywords = ["cosmology", "reionization", "kSZ", "machine learning", "astrophysics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy",
    "h5py",
    "torch",
    "ray[tune]>=2.0"
]

[project.optional-dependencies]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
]
dev = [
    "pytest>=7.0",
    "scipy",
    "matplotlib",
    "build",
    "twine",
    "ipykernel",
    "jupyter",
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "ruff",
]

[project.urls]
Homepage = "https://robertxpearce.github.io/reionization-emulator/"
Repository = "https://github.com/RobertxPearce/reionization-emulator"
Issues = "https://github.com/RobertxPearce/reionization-emulator/issues"

[tool.ruff]
line-length = 88
target-version = "py310"
extend-exclude = [
    ".venv",
    "build",
    "dist",
    "docs",
    "notebooks",
]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.hatch.build.targets.wheel]
packages = ["src/reionemu"]
